# contract-registry

./: .gitignore  Cargo.toml  docker-compose.yml
code-hash/: Cargo.toml
code-hash/src/: code_hash.rs  lib.rs
contract/: Cargo.toml  init-args.js
contract/src/: code_hash.rs  contract.rs  lib.rs  ownership.rs  verification.rs
data-types/: Cargo.toml
data-types/src/: verification.rs
model/: Cargo.toml
model/src/: code_hash.rs  lib.rs  sequential_id.rs  verification.rs
service/: Cargo.toml  Dockerfile
service/network/: mainnet.json
service/src/: env.rs  main.rs  network_config.rs
service/src/circleci/: client.rs  mod.rs  signature.rs  webhook.rs
service/src/contract_interaction/: mod.rs
service/src/repository/: mod.rs
src/: contract.rs  lib.rs  ownership.rs  verification.rs
web/: .gitignore  Cargo.toml  Dockerfile  app.py  circleci_verify.py  code_hash.py  docker-compose.yml  requirements.txt
web-rs/: Cargo.toml  out.wasm
web-rs/network/: testnet.json
web-rs/src/: circleci_artifacts.rs  circleci_verify.rs  env.rs  hash_code.rs  main.rs  network_config.rs
web-rs/src/circleci/: artifacts.rs  mod.rs
web-rs/src/contract_interaction/: mod.rs
web/src/: env.rs  main.rs
web/src/circleci/: artifacts.rs  client.rs  error.rs  signature.rs  verify.rs  webhook.rs
web/src/contract_interaction/: change.rs  mod.rs  view.rs  watch.rs
