[package]
name = "near-smart-contract-rust-template"
version = "0.1.0"
edition = "2021"
authors = ["Jacob Lindahl <jacob@near.foundation>"]

[dependencies]
model = { path="../model" }
near-sdk = "4.0.0-pre.7"
bs58 = "0.4.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
