[package]
name = "contract-registry-service"
version = "0.1.0"
edition = "2021"

[dependencies]
bs58 = "0.4.0"
model = { path="../model" }
dotenv = "0.15.0"
futures = "0.3.21"
hex = "0.4.3"
hmac = "0.12.0"
near-jsonrpc-client = "0.3.0"
near-jsonrpc-primitives = "0.12.0"
near-primitives = "0.12.0"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.136"
serde_json = "1.0.79"
sha2 = "0.10.1"
thiserror = "1.0.30"
tokio = { version = "1.16.1", features = ["full"] }
tracing = "0.1.30"
tracing-subscriber = { version = "0.3.8", features = ["env-filter"] }
warp = "0.3.2"
near-crypto = "0.12.0"

[features]
